# telemetry_calculator

./: .gitignore  Cargo.toml
src/: build.rs  calculus.rs  circbuf.rs  iter_calculus.rs  main.rs  noconsume.rs  serialbuf.rs  smoothing.rs  visualize.rs
src/simd/: conv.rs  iter.rs  mod.rs  tests.rs
src/smoothing/: circbuf.rs  mod.rs
src/trig/: iter.rs  mod.rs
testdata/: drop.csv  rotate.csv  still.csv
