[package]
name = "telemetry_calculator"
version = "0.1.0"
authors = ["thinkier <thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"

[dependencies.serial]
version = "0.4"
optional = true

[dependencies.piston_window]
version = "0.100"
optional = true

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
optional = true

[features]
smooth = []
visualize = ["piston_window", "piston2d-graphics"]
from_serial = ["serial"]

default = ["smooth", "visualize", "from_serial"]
