[package]
name = "telemetry_calculator"
version = "0.1.0"
authors = ["thinkier <thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Yeah sorry, serial unix definitely doesn't work on Windows
serial = "0.4"

[dependencies.nalgebra]
version = "0.18"
optional = true

[dependencies.image]
version = "0.22"
optional = true

[dependencies.piston_window]
version = "0.100"
optional = true

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
optional = true

[features]
smooth = []
normalize = ["nalgebra"]
visualize = ["piston_window", "piston2d-graphics", "image"]
gravity = []

default = ["smooth", "normalize", "visualize"]
